--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.37.1",
+    "lodash": "^4.17.21",
     "monaco-editor": "^0.52.2",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
@@ -20,6 +21,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.17",
     "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
