--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.37.1",
+    "@iconify/vue": "^5.0.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.52.2",
     "socket.io-client": "^4.8.1",
